--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-12 15:19+0800\n"
+"POT-Creation-Date: 2022-08-19 14:51+0800\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -649,9 +649,6 @@ msgstr "Cylindre"
 
 msgid "Cone"
 msgstr "Cône"
-
-msgid "Timelapse Wipe Tower"
-msgstr "Timelapse Wipe Tower"
 
 msgid "Add settings"
 msgstr "Ajouter des réglages"
@@ -1991,6 +1988,9 @@ msgstr "Estimation totale"
 msgid "Normal mode"
 msgstr "Mode normal"
 
+msgid "Cost"
+msgstr "Coût"
+
 msgid "Prepare time"
 msgstr "Temps de préparation"
 
@@ -2219,6 +2219,9 @@ msgstr "Vérifier la mise à jour"
 msgid "&About %s"
 msgstr "&Au sujet de %s"
 
+msgid "Open Network Test"
+msgstr ""
+
 msgid "Default View"
 msgstr "Vue par défaut"
 
@@ -2368,26 +2371,11 @@ msgstr "Utiliser la vue orthogonale"
 msgid "Preferences"
 msgstr "Préférences"
 
-msgid "About"
-msgstr ""
-
 msgid "View"
 msgstr "Vue"
 
 msgid "Help"
 msgstr "Aide"
-
-msgid "&File"
-msgstr "&File"
-
-msgid "&Edit"
-msgstr ""
-
-msgid "&View"
-msgstr "&View"
-
-msgid "&Help"
-msgstr "&Help"
 
 msgid "&Open G-code"
 msgstr "&Open G-code"
@@ -2419,6 +2407,15 @@ msgstr "&Quit"
 #, c-format, boost-format
 msgid "Quit %s"
 msgstr "Quit %s"
+
+msgid "&File"
+msgstr "&File"
+
+msgid "&View"
+msgstr "&View"
+
+msgid "&Help"
+msgstr "&Help"
 
 msgid "Save configuration as:"
 msgstr "Enregistrer la configuration sous :"
@@ -2466,26 +2463,23 @@ msgstr "En jouant..."
 msgid "Load failed [%d]!"
 msgstr "Le chargement a échoué [%d] !"
 
-msgid "3Dconnexion settings"
-msgstr "Paramètres 3Dconnexion"
-
-msgid "Device:"
-msgstr "Appareil :"
-
 msgid "Speed:"
 msgstr "Vitesse:"
-
-msgid "Translation"
-msgstr "Traduction"
-
-msgid "Zoom"
-msgstr "Zoom"
 
 msgid "Deadzone:"
 msgstr "Zone morte :"
 
 msgid "Options:"
 msgstr "Options :"
+
+msgid "Zoom"
+msgstr "Zoom"
+
+msgid "Translation/Zoom"
+msgstr ""
+
+msgid "3Dconnexion settings"
+msgstr "Paramètres 3Dconnexion"
 
 msgid "Swap Y/Z axes"
 msgstr "Permuter les axes Y/Z"
@@ -2806,9 +2800,6 @@ msgstr "Filament Utilisé (g)"
 
 msgid "Used Materials"
 msgstr "Matériaux utilisés"
-
-msgid "Cost"
-msgstr "Coût"
 
 msgid "Estimated time"
 msgstr "Temps estimé"
@@ -4071,6 +4062,9 @@ msgstr "Copier dans le presse-papier"
 msgid "Paste from clipboard"
 msgstr "Coller depuis le presse-papier"
 
+msgid "Show/Hide 3Dconnexion devices settings dialog"
+msgstr ""
+
 msgid "Show keyboard shortcuts list"
 msgstr "Afficher la liste des raccourcis clavier"
 
@@ -4211,6 +4205,9 @@ msgstr "⌘+molette de la souris"
 
 msgid "Support/Color Painting: adjust pen radius"
 msgstr "Support/Peinture couleur : ajustez le rayon du stylet"
+
+msgid "⌥+Mouse wheel"
+msgstr ""
 
 msgid "Support/Color Painting: adjust section position"
 msgstr "Support/Peinture couleur : ajuster la position de la section"
@@ -6510,10 +6507,14 @@ msgstr "Vérification de la nécessité du support"
 
 #, c-format, boost-format
 msgid ""
-"It seems object %s needs support to print. Please enable support generation."
+"It seems object %s has completely floating regions. Please re-orient the "
+"object or enable support generation."
 msgstr ""
-"Il semble que l'objet %s ait besoin d'aide pour imprimer. Veuillez activer "
-"la génération de support."
+
+#, c-format, boost-format
+msgid ""
+"It seems object %s has large overhangs. Please enable support generation."
+msgstr ""
 
 msgid "Optimizing toolpath"
 msgstr "Optimisation du parcours d'outil"
@@ -6571,6 +6572,23 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Timelapse Wipe Tower"
+#~ msgstr "Timelapse Wipe Tower"
+
+#~ msgid "Device:"
+#~ msgstr "Appareil :"
+
+#~ msgid "Translation"
+#~ msgstr "Traduction"
+
+#, c-format, boost-format
+#~ msgid ""
+#~ "It seems object %s needs support to print. Please enable support "
+#~ "generation."
+#~ msgstr ""
+#~ "Il semble que l'objet %s ait besoin d'aide pour imprimer. Veuillez "
+#~ "activer la génération de support."
 
 #~ msgid "Alt + Mouse wheel"
 #~ msgstr "Alt + molette de la souris"
