--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-12 15:19+0800\n"
+"POT-Creation-Date: 2022-08-19 14:51+0800\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -643,9 +643,6 @@ msgstr "Cilinder"
 
 msgid "Cone"
 msgstr "Kegel"
-
-msgid "Timelapse Wipe Tower"
-msgstr "Timelapse Wipe Tower"
 
 msgid "Add settings"
 msgstr "Instellingen toevoegen"
@@ -2015,6 +2012,9 @@ msgstr "Schatting totaal"
 msgid "Normal mode"
 msgstr "Normale modus"
 
+msgid "Cost"
+msgstr "Kosten"
+
 msgid "Prepare time"
 msgstr "Voorbereidingstijd"
 
@@ -2242,6 +2242,9 @@ msgstr "Zoeken naar updates"
 msgid "&About %s"
 msgstr "&Over %s"
 
+msgid "Open Network Test"
+msgstr ""
+
 msgid "Default View"
 msgstr "Standaard weergave"
 
@@ -2391,26 +2394,11 @@ msgstr "Orthogonale weergave gebruiken"
 msgid "Preferences"
 msgstr "Voorkeuren"
 
-msgid "About"
-msgstr ""
-
 msgid "View"
 msgstr "Weergave"
 
 msgid "Help"
 msgstr "Help"
-
-msgid "&File"
-msgstr "&Bestand"
-
-msgid "&Edit"
-msgstr ""
-
-msgid "&View"
-msgstr "&Bekijken"
-
-msgid "&Help"
-msgstr "&Help"
 
 msgid "&Open G-code"
 msgstr "&Open G-code"
@@ -2442,6 +2430,15 @@ msgstr "&Afsluiten"
 #, c-format, boost-format
 msgid "Quit %s"
 msgstr "Quit %s"
+
+msgid "&File"
+msgstr "&Bestand"
+
+msgid "&View"
+msgstr "&Bekijken"
+
+msgid "&Help"
+msgstr "&Help"
 
 msgid "Save configuration as:"
 msgstr "Bewaar configuratie als:"
@@ -2489,26 +2486,23 @@ msgstr "Afspelen..."
 msgid "Load failed [%d]!"
 msgstr "Laden mislukt [%d]!"
 
-msgid "3Dconnexion settings"
-msgstr "3Dconnexion instellingen"
-
-msgid "Device:"
-msgstr "Apparaat:"
-
 msgid "Speed:"
 msgstr "Snelheid"
-
-msgid "Translation"
-msgstr "Vertaling"
-
-msgid "Zoom"
-msgstr "Inzoomen"
 
 msgid "Deadzone:"
 msgstr "Deadzone:"
 
 msgid "Options:"
 msgstr "Opties:"
+
+msgid "Zoom"
+msgstr "Inzoomen"
+
+msgid "Translation/Zoom"
+msgstr ""
+
+msgid "3Dconnexion settings"
+msgstr "3Dconnexion instellingen"
 
 msgid "Swap Y/Z axes"
 msgstr "Wissel Y/Z assen om"
@@ -2842,9 +2836,6 @@ msgstr "Verbruikt filament (g)"
 
 msgid "Used Materials"
 msgstr "Verbruikte materialen"
-
-msgid "Cost"
-msgstr "Kosten"
 
 msgid "Estimated time"
 msgstr "Geschatte tijd"
@@ -4115,6 +4106,9 @@ msgstr "Kopieer naar klembord"
 msgid "Paste from clipboard"
 msgstr "Plakken vanuit klembord"
 
+msgid "Show/Hide 3Dconnexion devices settings dialog"
+msgstr ""
+
 msgid "Show keyboard shortcuts list"
 msgstr "Toon lijst met sneltoetsen"
 
@@ -4255,6 +4249,9 @@ msgstr "⌘+muiswiel"
 
 msgid "Support/Color Painting: adjust pen radius"
 msgstr "Ondersteuning(support)/kleur intekenen: pas de pen diameter aan"
+
+msgid "⌥+Mouse wheel"
+msgstr ""
 
 msgid "Support/Color Painting: adjust section position"
 msgstr "Ondersteuning(support)/kleur intekenen: pas de sectie positie aan"
@@ -6558,10 +6555,14 @@ msgstr "Controleren of support is noodzakelijk"
 
 #, c-format, boost-format
 msgid ""
-"It seems object %s needs support to print. Please enable support generation."
+"It seems object %s has completely floating regions. Please re-orient the "
+"object or enable support generation."
 msgstr ""
-"Het lijkt er op dat object %s support nodig heeft om te printen. Zet support "
-"genereren aan indien nodig."
+
+#, c-format, boost-format
+msgid ""
+"It seems object %s has large overhangs. Please enable support generation."
+msgstr ""
 
 msgid "Optimizing toolpath"
 msgstr "Optimaliseren van het pad"
@@ -6620,6 +6621,23 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Timelapse Wipe Tower"
+#~ msgstr "Timelapse Wipe Tower"
+
+#~ msgid "Device:"
+#~ msgstr "Apparaat:"
+
+#~ msgid "Translation"
+#~ msgstr "Vertaling"
+
+#, c-format, boost-format
+#~ msgid ""
+#~ "It seems object %s needs support to print. Please enable support "
+#~ "generation."
+#~ msgstr ""
+#~ "Het lijkt er op dat object %s support nodig heeft om te printen. Zet "
+#~ "support genereren aan indien nodig."
 
 #~ msgid "Alt + Mouse wheel"
 #~ msgstr "Alt + muiswiel"
