--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-12 15:19+0800\n"
+"POT-Creation-Date: 2022-08-19 14:51+0800\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -639,9 +639,6 @@ msgstr "Cylinder"
 
 msgid "Cone"
 msgstr "Kon"
-
-msgid "Timelapse Wipe Tower"
-msgstr "Timelapse Wipe Tower"
 
 msgid "Add settings"
 msgstr "Lägg till inställning"
@@ -1989,6 +1986,9 @@ msgstr "Total Uppskattning"
 msgid "Normal mode"
 msgstr "Normalt läge"
 
+msgid "Cost"
+msgstr "Kostnad"
+
 msgid "Prepare time"
 msgstr "Förbered tid"
 
@@ -2216,6 +2216,9 @@ msgstr "Sök efter Uppdatering"
 msgid "&About %s"
 msgstr "&Om %s"
 
+msgid "Open Network Test"
+msgstr ""
+
 msgid "Default View"
 msgstr "Standard Vy"
 
@@ -2365,26 +2368,11 @@ msgstr "Använd Ortogonal Vy"
 msgid "Preferences"
 msgstr "Inställningar"
 
-msgid "About"
-msgstr ""
-
 msgid "View"
 msgstr "Vy"
 
 msgid "Help"
 msgstr "Hjälp"
-
-msgid "&File"
-msgstr "&Fil"
-
-msgid "&Edit"
-msgstr ""
-
-msgid "&View"
-msgstr "&Visa"
-
-msgid "&Help"
-msgstr "&Hjälp"
 
 msgid "&Open G-code"
 msgstr "&Öppna G-kod"
@@ -2416,6 +2404,15 @@ msgstr "&Avsluta"
 #, c-format, boost-format
 msgid "Quit %s"
 msgstr "Avsluta %s"
+
+msgid "&File"
+msgstr "&Fil"
+
+msgid "&View"
+msgstr "&Visa"
+
+msgid "&Help"
+msgstr "&Hjälp"
 
 msgid "Save configuration as:"
 msgstr "Spara konfigurationen som:"
@@ -2463,26 +2460,23 @@ msgstr "Spelar..."
 msgid "Load failed [%d]!"
 msgstr "Laddning misslyckad [%d]!"
 
-msgid "3Dconnexion settings"
-msgstr "3Dconnexion inställningar"
-
-msgid "Device:"
-msgstr "Enhet:"
-
 msgid "Speed:"
 msgstr "Hastighet:"
-
-msgid "Translation"
-msgstr "Översättning"
-
-msgid "Zoom"
-msgstr "Zooma"
 
 msgid "Deadzone:"
 msgstr "Upphör:"
 
 msgid "Options:"
 msgstr "Val:"
+
+msgid "Zoom"
+msgstr "Zooma"
+
+msgid "Translation/Zoom"
+msgstr ""
+
+msgid "3Dconnexion settings"
+msgstr "3Dconnexion inställningar"
 
 msgid "Swap Y/Z axes"
 msgstr "Byta Y/Z axes"
@@ -2803,9 +2797,6 @@ msgstr "Filament Åtgång (g)"
 
 msgid "Used Materials"
 msgstr "Material Åtgång"
-
-msgid "Cost"
-msgstr "Kostnad"
 
 msgid "Estimated time"
 msgstr "Uppskattad tid"
@@ -4048,6 +4039,9 @@ msgstr "Kopiera till urklipp"
 msgid "Paste from clipboard"
 msgstr "Klistra in ifrån urklipp"
 
+msgid "Show/Hide 3Dconnexion devices settings dialog"
+msgstr ""
+
 msgid "Show keyboard shortcuts list"
 msgstr "Visa tangentbordets genvägs lista"
 
@@ -4187,6 +4181,9 @@ msgstr ""
 
 msgid "Support/Color Painting: adjust pen radius"
 msgstr "Support/Färgläggning: justera penn radie"
+
+msgid "⌥+Mouse wheel"
+msgstr ""
 
 msgid "Support/Color Painting: adjust section position"
 msgstr "Support/Färgläggning:justera sektions positionen"
@@ -6410,9 +6407,14 @@ msgstr "Kontrollera supportens nödvändighet"
 
 #, c-format, boost-format
 msgid ""
-"It seems object %s needs support to print. Please enable support generation."
+"It seems object %s has completely floating regions. Please re-orient the "
+"object or enable support generation."
 msgstr ""
-"Objekt verkar %s behöva support för att skrivas ut. Aktivera support valen."
+
+#, c-format, boost-format
+msgid ""
+"It seems object %s has large overhangs. Please enable support generation."
+msgstr ""
 
 msgid "Optimizing toolpath"
 msgstr "Optimerar verktygsbanan"
@@ -6468,6 +6470,23 @@ msgstr "Support: åtgärda hål vid lager %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: föröka grenar vid lager %d"
+
+#~ msgid "Timelapse Wipe Tower"
+#~ msgstr "Timelapse Wipe Tower"
+
+#~ msgid "Device:"
+#~ msgstr "Enhet:"
+
+#~ msgid "Translation"
+#~ msgstr "Översättning"
+
+#, c-format, boost-format
+#~ msgid ""
+#~ "It seems object %s needs support to print. Please enable support "
+#~ "generation."
+#~ msgstr ""
+#~ "Objekt verkar %s behöva support för att skrivas ut. Aktivera support "
+#~ "valen."
 
 #~ msgid "Alt + Mouse wheel"
 #~ msgstr "Alt + mushjul"
